feat: Initialized Server with Express & TRPC. DB Initialized with Prisma. Created one schema in prisma and synced with db.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.83.0",
+    "@trpc/client": "^11.4.3",
+    "@trpc/react-query": "^11.4.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
