--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,20 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^5.1.0"
+    "@prisma/client": "^6.12.0",
+    "@trpc/server": "^11.4.3",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "iron-session": "^8.0.4",
+    "superjson": "^2.2.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.15",
+    "prisma": "^6.12.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "zod-prisma-types": "^3.2.4"
   }
 }
