--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^6.12.0",
     "@trpc/server": "^11.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "iron-session": "^8.0.4",
     "superjson": "^2.2.2"
